Added alternative &FF format output

--- a/index.html
+++ b/index.html
@@ -39,8 +39,27 @@
 	<div id="main-container" class="container">
 		<div class="grid-container">
 
-			<div id="color-grid">
-				<!-- Color Grid will be added here by JavaScript -->
+			<div id="color-grid-container">
+				<h5 class="center-header">Palette</h5>
+
+				<div id="color-grid">
+					<!-- Color Grid will be added here by JavaScript -->
+				</div>
+
+				<h5 class="center-header">Options</h5>
+
+				<div id="options">
+
+					<p class="output-format">Output Format</p>
+					<div id="hex-format">
+						<label>
+							<input type="radio" name="hex" value="ampersand" checked> &amp;FF
+						</label>
+						<label>
+							<input type="radio" name="hex" value="zero"> 0xFF
+						</label>	
+					</div>
+				</div>
 			</div>
 			<div id="grid">
 				<!-- Main Grid will be added here by JavaScript -->
@@ -79,75 +98,74 @@
 		<h2 id="sprite-output-header">Sprite 1 Data</h2>
 		<div id="output-container">
 			<textarea type="text" contenteditable="true"
-				id="sprite-output">Sprite1_1:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_2:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_3:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_4:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_5:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_6:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_7:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0xFF, 0xFF, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_8:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_9:    DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0xF0, 0x0F, 0x00, 0xFF, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_10:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0x0F, 0xF0, 0xFF, 0x0F, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_11:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xF0, 0xFF, 0xF0, 0xFF, 0xF0, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_12:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xF0, 0xF0, 0x00, 0x00, 0xF0, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_13:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xF0, 0xF0, 0x00, 0x00, 0xF0, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_14:   DEFB      0xFF, 0xFF, 0xF0, 0x00, 0x0F, 0xFF, 0x00, 0xFF, 0xF0, 0x0F, 0xFF, 0x00, 0x00, 0xFF, 0xFF, 0xFF
-Sprite1_15:   DEFB      0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF, 0x00, 0x0F, 0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF
-Sprite1_16:   DEFB      0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xF0, 0xFF, 0xFF, 0xFF, 0xF0, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF
-Sprite1_17:   DEFB      0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF
-Sprite1_18:   DEFB      0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xF0, 0x00, 0x00, 0xFF, 0xFF, 0x0A, 0xAA, 0x0F, 0xFF, 0xFF
-Sprite1_19:   DEFB      0xFF, 0xFF, 0xF0, 0x00, 0xF0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xF0, 0x00, 0xFF, 0xFF, 0xFF
-Sprite1_20:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_21:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x0F, 0xFF, 0xFF, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_22:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_23:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x0A, 0xAA, 0xAF, 0xAA, 0xAA, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_24:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xAA, 0xAF, 0xA0, 0xAF, 0xAA, 0xA0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_25:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xAA, 0xAA, 0xA0, 0xAA, 0xAA, 0xA0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_26:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0xAA, 0xAA, 0xA0, 0xAA, 0xAA, 0xA0, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_27:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x0F, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_28:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_29:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_30:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_31:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite1_32:   DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF</textarea>
+				id="sprite-output">Sprite1_1:    DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_2:    DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_3:    DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_4:    DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_5:    DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_6:    DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &F0, &00, &00, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_7:    DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &0F, &FF, &FF, &0F, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_8:    DEFB      &FF, &FF, &FF, &FF, &FF, &F0, &FF, &FF, &FF, &F0, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_9:    DEFB      &FF, &FF, &FF, &FF, &FF, &0F, &F0, &0F, &00, &FF, &0F, &FF, &FF, &FF, &FF, &FF
+Sprite1_10:   DEFB      &FF, &FF, &FF, &FF, &FF, &0F, &0F, &F0, &FF, &0F, &0F, &FF, &FF, &FF, &FF, &FF
+Sprite1_11:   DEFB      &FF, &FF, &FF, &FF, &F0, &F0, &FF, &F0, &FF, &F0, &F0, &FF, &FF, &FF, &FF, &FF
+Sprite1_12:   DEFB      &FF, &FF, &FF, &FF, &F0, &F0, &F0, &00, &00, &F0, &F0, &FF, &FF, &FF, &FF, &FF
+Sprite1_13:   DEFB      &FF, &FF, &FF, &FF, &F0, &F0, &F0, &00, &00, &F0, &F0, &FF, &FF, &FF, &FF, &FF
+Sprite1_14:   DEFB      &FF, &FF, &F0, &00, &0F, &FF, &00, &FF, &F0, &0F, &FF, &00, &00, &FF, &FF, &FF
+Sprite1_15:   DEFB      &FF, &FF, &0A, &AA, &0F, &FF, &FF, &00, &0F, &FF, &FF, &0A, &AA, &0F, &FF, &FF
+Sprite1_16:   DEFB      &FF, &FF, &0A, &AA, &0F, &F0, &FF, &FF, &FF, &F0, &FF, &0A, &AA, &0F, &FF, &FF
+Sprite1_17:   DEFB      &FF, &FF, &0A, &AA, &0F, &FF, &00, &00, &00, &0F, &FF, &0A, &AA, &0F, &FF, &FF
+Sprite1_18:   DEFB      &FF, &FF, &0A, &AA, &0F, &FF, &F0, &00, &00, &FF, &FF, &0A, &AA, &0F, &FF, &FF
+Sprite1_19:   DEFB      &FF, &FF, &F0, &00, &F0, &FF, &FF, &FF, &FF, &FF, &F0, &F0, &00, &FF, &FF, &FF
+Sprite1_20:   DEFB      &FF, &FF, &FF, &FF, &FF, &0F, &FF, &FF, &FF, &FF, &0F, &FF, &FF, &FF, &FF, &FF
+Sprite1_21:   DEFB      &FF, &FF, &FF, &FF, &FF, &F0, &0F, &FF, &FF, &00, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_22:   DEFB      &FF, &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_23:   DEFB      &FF, &FF, &FF, &FF, &FF, &0A, &AA, &AF, &AA, &AA, &0F, &FF, &FF, &FF, &FF, &FF
+Sprite1_24:   DEFB      &FF, &FF, &FF, &FF, &F0, &AA, &AF, &A0, &AF, &AA, &A0, &FF, &FF, &FF, &FF, &FF
+Sprite1_25:   DEFB      &FF, &FF, &FF, &FF, &F0, &AA, &AA, &A0, &AA, &AA, &A0, &FF, &FF, &FF, &FF, &FF
+Sprite1_26:   DEFB      &FF, &FF, &FF, &FF, &F0, &AA, &AA, &A0, &AA, &AA, &A0, &FF, &FF, &FF, &FF, &FF
+Sprite1_27:   DEFB      &FF, &FF, &FF, &FF, &F0, &00, &00, &0F, &00, &00, &00, &FF, &FF, &FF, &FF, &FF
+Sprite1_28:   DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_29:   DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_30:   DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_31:   DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_32:   DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF</textarea>
 		</div>
 
 		<h2 id="mask-output-header">Mask 1 Data</h2>
 		<div id="mask-output-container">
-			<textarea type="text" contenteditable="true" id="mask-output">Sprite0_Mask_1:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_2:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_3:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_4:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_5:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_6:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_7:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_8:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_9:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_10:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_11:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_12:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_13:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_14:DEFB      0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_15:DEFB      0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF
-Sprite0_Mask_16:DEFB      0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF
-Sprite0_Mask_17:DEFB      0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF
-Sprite0_Mask_18:DEFB      0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF
-Sprite0_Mask_19:DEFB      0xFF, 0xFF, 0xF0, 0x00, 0xF0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xF0, 0x00, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_20:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_21:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_22:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_23:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0F, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_24:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_25:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_26:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_27:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xF0, 0x00, 0x00, 0x0F, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_28:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_29:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_30:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_31:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-Sprite0_Mask_32:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF
-        </textarea>
+			<textarea type="text" contenteditable="true" id="mask-output">Sprite1_Mask_1:		DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_2:		DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_3:		DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_4:		DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_5:		DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_6:		DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &F0, &00, &00, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_7:		DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &00, &00, &00, &0F, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_8:		DEFB      &FF, &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_9:		DEFB      &FF, &FF, &FF, &FF, &FF, &00, &00, &00, &00, &00, &0F, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_10:	DEFB      &FF, &FF, &FF, &FF, &FF, &00, &00, &00, &00, &00, &0F, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_11:	DEFB      &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_12:	DEFB      &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_13:	DEFB      &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_14:	DEFB      &FF, &FF, &F0, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &FF, &FF, &FF
+Sprite1_Mask_15:	DEFB      &FF, &FF, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &0F, &FF, &FF
+Sprite1_Mask_16:	DEFB      &FF, &FF, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &0F, &FF, &FF
+Sprite1_Mask_17:	DEFB      &FF, &FF, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &0F, &FF, &FF
+Sprite1_Mask_18:	DEFB      &FF, &FF, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &00, &0F, &FF, &FF
+Sprite1_Mask_19:	DEFB      &FF, &FF, &F0, &00, &F0, &00, &00, &00, &00, &00, &00, &F0, &00, &FF, &FF, &FF
+Sprite1_Mask_20:	DEFB      &FF, &FF, &FF, &FF, &FF, &00, &00, &00, &00, &00, &0F, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_21:	DEFB      &FF, &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_22:	DEFB      &FF, &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_23:	DEFB      &FF, &FF, &FF, &FF, &FF, &00, &00, &00, &00, &00, &0F, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_24:	DEFB      &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_25:	DEFB      &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_26:	DEFB      &FF, &FF, &FF, &FF, &F0, &00, &00, &00, &00, &00, &00, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_27:	DEFB      &FF, &FF, &FF, &FF, &F0, &00, &00, &0F, &00, &00, &00, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_28:	DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_29:	DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_30:	DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_31:	DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF
+Sprite1_Mask_32:	DEFB      &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF, &FF</textarea>
 		</div>
 
 	</div>
@@ -161,16 +179,13 @@ Sprite0_Mask_32:DEFB      0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 
 			<div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
 				<h1 class="display-4 fw-bold lh-1">SAM Coupé Blogs</h1>
 				<p class="lead">You can find a few tutorials on Assembly Language and Graphics Programming for the SAM
-					Coupé
-					here;</p>
+					Coupé here;</p>
 				<a href="https://www.petecodes.co.uk/sam-coupe-assembly-language-programming/">SAM Coupé Assembly
-					Language
-					Programming</a>
+					Language Programming</a>
 				<br>
 				<br>
 				<a href="https://www.petecodes.co.uk/graphics-in-assembler-for-the-sam-coupe/">Graphics in Assembler for
-					the SAM
-					Coupè</a>
+					the SAM Coupè</a>
 			</div>
 			<div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
 				<img class="rounded-lg-3 small-hero-image" src="images/Sam_the_robot.png" alt="" width="720">
